# universal-context

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  longmemeval.yml
eval/: README.md  longmemeval_baseline.md  run_longmemeval.py  run_uc_smoke.py  uc_smoke_baseline.md  uc_smoke_cases.json
skills/pulling-context/: SKILL.md
tests/: test_adapters.py  test_admin_db_rebuild.py  test_cli_alpha.py  test_cli_json.py  test_cli_memory_migrate.py  test_cli_memory_remember.py  test_config.py  test_daemon.py  test_db.py  test_e2e.py  test_embed.py  test_git.py  test_golden_fixtures.py  test_integration.py  test_llm.py  test_memory.py  test_memory_distillation_router.py  test_memory_read_precedence.py  test_memory_repo.py  test_models.py  test_reason.py  test_redact.py  test_search.py  test_sharing.py  test_skill_promotion.py
tests/fixtures/: claude_session.jsonl  codex_session.jsonl  gemini_session.json
universal_context/: __init__.py  cli.py  config.py  embed.py  git.py  llm.py  memory_repo.py  reason.py  rebuild.py  redact.py  session_cache.py
universal_context/adapters/: __init__.py  base.py  claude.py  codex.py  gemini.py  registry.py
universal_context/daemon/: __init__.py  core.py  watcher.py  worker.py
universal_context/daemon/processors/: __init__.py  base.py  memory.py  summarizer.py
universal_context/db/: client.py  queries.py  schema.py
universal_context/models/: types.py
universal_context/sharing/: __init__.py  bundle.py  checkpoint.py
universal_context/triggers/: __init__.py  base.py  claude_trigger.py  codex_trigger.py  gemini_trigger.py
universal_context/tui/: __init__.py  app.py
universal_context/tui/widgets/: __init__.py  overview.py  search.py  timeline.py
